# osci-rs

./: Cargo.toml  PLAN.md
.github/workflows/: release.yml
docs/: 00-index.md  01-project-setup.md  02-audio-fundamentals.md  03-ownership-borrowing.md  04-egui-basics.md  05-traits-generics.md  06-collections-lifetimes.md  08-error-handling.md  09-image-processing.md  10-fonts-bezier.md  12-lock-free.md  13-3d-graphics.md  14-serialization.md  15-midi.md  16-distribution.md
src/: main.rs  midi.rs  settings.rs
src/audio/: buffer.rs  engine.rs  mod.rs
src/effects/: lfo.rs  mod.rs  traits.rs  transform.rs
src/render/: mod.rs  oscilloscope.rs
src/shapes/: image.rs  mesh3d.rs  mod.rs  path.rs  primitives.rs  scene.rs  svg.rs  text.rs  traits.rs
