[package]
name = "osci-rs"
version = "0.1.0"
edition = "2021"
description = "Oscilloscope music generator - convert graphics to XY audio"
license = "MIT"

[dependencies]
# GUI framework (egui + windowing)
eframe = "0.29"

# Cross-platform audio I/O
cpal = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"
