[package]
name = "osci-rs"
version = "0.1.0"
edition = "2021"
description = "Oscilloscope music generator - convert graphics to XY audio"
license = "MIT"

[dependencies]
# GUI framework (egui + windowing)
eframe = "0.29"

# Cross-platform audio I/O
cpal = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# SVG parsing
usvg = "0.44"

# File dialogs
rfd = "0.15"

# Error handling
thiserror = "2.0"

# Image processing
image = "0.25"

# Font handling
ab_glyph = "0.2"

# Lock-free ring buffer for audio
ringbuf = "0.4"

# Linear algebra for 3D graphics
nalgebra = "0.33"

# OBJ file loading
tobj = "4.0"

# Settings persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"

# MIDI input
midir = "0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
